--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project by Henricksone</title>
+    <title>LOAN CALC: A Coding Project by Henricksone</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="/img/EH-Logo.png" class="d-inline-block align-text-top" alt="Henricksone Logo" height="24"> APP NAME</a>
+            <img src="/img/EH-Logo.png" class="d-inline-block align-text-top" alt="Henricksone Logo" height="24"> LOAN CALC</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 ro-cols-1 row-cols-lg-2">
                <div class="col order-last order-lg-first vstack">
-                   <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
+                   <h1 class="display-5 fw-bold lh-1 mb-3">LOAN CALC: A Coding Project</h1>
                    <h4 class="lead">Live life one loop at a time. A javascript coding excercise using loops. 
                        Write a program the displays the number from 0 to 100. Display the even number in <strong>BOLD.</strong>
                     </h4>
@@ -83,7 +83,7 @@
                         </div>
                     </h5>
                </div>
-               <div class="col"><img src="/img/Logo-Century.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500"></div>
+               <div class="col"><img src="/img/Logo-LoanCalc.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500"></div>
            </div>
        </div>
     </main>
