--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
            <div class="row g-5 py-5 ro-cols-1 row-cols-lg-2">
                <div class="col order-last order-lg-first vstack">
                    <h1 class="display-5 fw-bold lh-1 mb-3">LOAN CALC: A Coding Project</h1>
-                   <h4 class="lead">Live life one loop at a time. A javascript coding excercise using loops. 
-                       Write a program the displays the number from 0 to 100. Display the even number in <strong>BOLD.</strong>
+                   <h4 class="lead">From an input of loan amount, loan term in month, and an interest rate, calculate
+                       the loan amoritization table for repayment.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
